--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_staggered_grid_view: ^0.3.0
+  cloud_firestore: ^0.12.9
+  carousel_pro: ^1.0.0
+  transparent_image: ^1.0.0
+  scoped_model: ^1.0.1
+  firebase_auth: ^0.11.1+12
+  url_launcher: ^5.1.1
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
@@ -41,9 +48,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - lib/view/images/icons/
+  - lib/view/images/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
