--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   firebase_auth: ^0.11.1+12
   url_launcher: ^5.1.1
   cupertino_icons: ^0.1.2
+  hexcolor: ^1.0.2
+  curved_navigation_bar: ^0.3.3
 
 dev_dependencies:
   flutter_test:
