--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - lib/view/images/icons/
-  - lib/view/images/icons/
+  - lib/view/images/background/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
