--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,6 @@ dependencies:
   cloud_firestore: ^0.12.9
   carousel_pro: ^1.0.0
   transparent_image: ^1.0.0
-  scoped_model: ^1.0.1
   firebase_auth: ^0.11.1+12
   url_launcher: ^5.1.1
   cupertino_icons: ^0.1.2
@@ -34,6 +33,7 @@ dependencies:
   curved_navigation_bar: ^0.3.3
   bloc_pattern: ^2.3.2
   rxdart: ^0.24.1
+  mask_text_input_formatter: ^1.0.7
 
 dev_dependencies:
   flutter_test:
